--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
     "concurrently": "^9.1.2",
+    "dotenv": "^16.5.0",
+    "groq-sdk": "^0.19.0",
     "node-pty": "^1.1.0-beta33",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
