--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.1.3",
+    "uuid": "^11.1.0",
     "wait-on": "^8.0.3"
   },
   "devDependencies": {
