--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@xterm/xterm": "^5.5.0",
     "concurrently": "^9.1.2",
     "dotenv": "^16.5.0",
+    "electron-store": "^10.0.1",
     "groq-sdk": "^0.19.0",
     "node-pty": "^1.1.0-beta33",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.1",
     "tailwindcss": "^4.1.3",
     "uuid": "^11.1.0",
     "wait-on": "^8.0.3"
