--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.5.0",
     "electron-store": "^10.0.1",
     "groq-sdk": "^0.19.0",
+    "lucide-react": "^0.501.0",
     "node-pty": "^1.1.0-beta33",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
